<resources>
    <string name="app_name">bookHotel_recognize</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests_count_badge">REQUESTS</string>

    <string name="scroll_behavior">@string/appbar_scrolling_view_behavior</string>
    <string name="detail_header_behavior">com.k.neleme.detail.DetailHeaderBehavior</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="weight_mock" translatable="false">$270</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="hotel_package_price">$190</string>
    <string name="order_call">#130-1234-1234</string>
    <string name="requests_count_mock">10</string>
    <string name="title_hotel_reserve_string">DELUXE SUIT</string>
    <string name="type">TYPE</string>
    <string name="rating_mock">(4.5)</string>
    <string name="media">媒体设施</string>
    <string name="media_name">小心心</string>
    <string name="policy">费用政策</string>
    <string name="policy_contain">中式早餐</string>
    <string name="main_facility">便利设施</string>
    <string name="main_facility_contain">WIFI FREE</string>
    <string name="other_facility">视屏饮品</string>
    <string name="other_facility_contain">WRWH</string>
    <string name="main_facility_contain_more">多种规格电源插头,110V</string>
    <string name="other_facility_contain_more">小心心</string>
    <string name="request_btn_text">REQUESTS</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="check_in_string">10:00-15:00</string>
    <string name="check_out_string">17:00-22:00</string>
    <string name="rules_text_string">酒店允许携带儿童入住 每件客房最多容纳1名儿童</string>
    <string name="eat_facility_contain">养身套餐,豪华套餐，VIP套餐，总统配置套餐</string>
    <string name="isUp" />
    <string name="offset" />
</resources>
